# Sound-Management-Application

./: .gitignore  CMakeLists.txt  README.md
JuceLibraryCode/: JuceHeader.h
SoundManager/: SoundManager.jucer
SoundManager/JuceLibraryCode/: JuceHeader.h
SoundManager/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Test_Files/: GenerateHTML  GenerateHTML.cpp  MainComponentLogin.h  Makefile  MockSliderAndPermission.h  PasswordValidator.h  PlaybackManager.h  README  RecordingManager.h  SaveManager.h  SoundManager.jucer  TestReport.html  UnitTests  UserManagementTest.h  cppunit_results.xml  main.cpp
